--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,18 +30,7 @@ jobs:
         npm install
         gulp
 
-    - name: Commit files
-      id: commit
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "github-actions"
-        git add *.html
-        git commit -m "Update docs" -a
-        echo "push=true" >>$GITHUB_OUTPUT
-      shell: bash
-
-    - name: Push changes
-      if: steps.commit.outputs.push == 'true'
-      uses: ad-m/github-push-action@master
+    - name: Deploy to Github Pages
+      uses: JamesIves/github-pages-deploy-action@v4
       with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
+        folder: . # root
