--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -29,9 +29,8 @@ jobs:
       run: |
         npm install
         gulp
-        dir
 
     - name: Deploy to Github Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        folder: . # root
+        folder: .
