--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,3 +38,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: build
+
+    - name: Deploy to GitHub Pages?
+        id: deployment
+        uses: actions/deploy-pages@v4
