--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,15 +6,6 @@ on:
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-      
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,10 +13,6 @@ jobs:
     strategy:
       matrix:
         node-version: [20.x]
-
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
     - uses: actions/checkout@v4
@@ -40,6 +27,10 @@ jobs:
         npm install
         gulp
 
-    - name: Deploy to GitHub Pages?
-      id: deployment
-      uses: actions/deploy-pages@v4
+    - name: Deploy to GitHub Pages
+      uses: crazy-max/ghaction-github-pages@v4
+      with:
+        target_branch: gh-pages
+        build_dir: build
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
