--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,31 +6,32 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
-    strategy:
-      matrix:
-        node-version: [20.x]
+permissions:
+  contents: write
+
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    concurrency: ci-#{{github.ref}}
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Configure Node
       uses: actions/setup-node@v4
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '20.x'
 
     - name: Build
       run: |
         npm install
         gulp
 
-    - name: Deploy to GitHub Pages
-      uses: crazy-max/ghaction-github-pages@v4
-      with:
-        target_branch: gh-pages
-        build_dir: build
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build
