--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    concurrency: ci-#{{github.ref}}
+    concurrency: ci-${{ github.ref }}
 
     steps:
     - name: Checkout
@@ -24,7 +24,7 @@ jobs:
     - name: Configure Node
       uses: actions/setup-node@v4
       with:
-        node-version: '20.x'
+        node-version: 20
 
     - name: Build
       run: |
